[gd_scene load_steps=6 format=3 uid="uid://b8ebym4vluj2q"]

[ext_resource type="Script" path="res://General/ControlsOverworld/MagicMenu/MagicMenu.gd" id="1_vyimn"]
[ext_resource type="Texture2D" uid="uid://cjy1pwbnlhjbu" path="res://Assets/SF1/ShiningForceTextBackground.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bexr4d3s2v782" path="res://Assets/SFCD/Items/EmptyItemSlot.png" id="5"]
[ext_resource type="PackedScene" uid="uid://b451lgd0islao" path="res://General/ControlsSelectors/RedSelectionBorder/RedSelectionBorder.tscn" id="5_7fev1"]
[ext_resource type="FontFile" uid="uid://dsvjkkfpt1rqd" path="res://Assets/SF1/ShiningForceMenuFont.tres" id="6"]

[node name="MagicMenu" type="Node2D"]
script = ExtResource("1_vyimn")

[node name="SpellSlotUpSprite" type="Sprite2D" parent="."]
position = Vector2(24, 12)
texture = ExtResource("5")
metadata/_edit_lock_ = true

[node name="SpellSlotLeftSprite" type="Sprite2D" parent="."]
position = Vector2(8, 24)
texture = ExtResource("5")
metadata/_edit_lock_ = true

[node name="SpellSlotRightSprite" type="Sprite2D" parent="."]
position = Vector2(40, 24)
texture = ExtResource("5")
metadata/_edit_lock_ = true

[node name="SpellSlotDownSprite" type="Sprite2D" parent="."]
position = Vector2(24, 36)
texture = ExtResource("5")
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 64.0
offset_right = 168.0
offset_bottom = 48.0
texture = ExtResource("2")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
metadata/_edit_lock_ = true

[node name="SpellNameLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 8.22775
offset_top = 8.0
offset_right = -7.77224
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("6")
text = "Name"
metadata/_edit_lock_ = true

[node name="SpellLevelWrapper" type="Node2D" parent="NinePatchRect"]
position = Vector2(8, 20)
metadata/_edit_lock_ = true

[node name="LeftColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
offset_right = 1.0
offset_bottom = 8.0
metadata/_edit_lock_ = true

[node name="RightColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
offset_left = 17.0
offset_right = 18.0
offset_bottom = 8.0
metadata/_edit_lock_ = true

[node name="BottomColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
offset_left = 1.0
offset_top = 8.0
offset_right = 17.0
offset_bottom = 9.0
metadata/_edit_lock_ = true

[node name="TopColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
offset_left = 1.0
offset_top = -0.999998
offset_right = 17.0
metadata/_edit_lock_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="NinePatchRect/SpellLevelWrapper"]
offset_left = 1.0
offset_right = 17.0
offset_bottom = 8.0
color = Color(0.898039, 0.8, 0.0156863, 1)
metadata/_edit_lock_ = true

[node name="MagicLevelSelectorWrapperNode2D" type="Node2D" parent="NinePatchRect"]
visible = false
metadata/_edit_lock_ = true

[node name="LeftColorRect" type="ColorRect" parent="NinePatchRect/MagicLevelSelectorWrapperNode2D"]
offset_left = 6.0
offset_top = 17.0
offset_right = 7.0
offset_bottom = 31.0
color = Color(0.741176, 0.0862745, 0.0862745, 1)
metadata/_edit_lock_ = true

[node name="BottomColorRect" type="ColorRect" parent="NinePatchRect/MagicLevelSelectorWrapperNode2D"]
offset_left = 7.0
offset_top = 31.0
offset_right = 97.0
offset_bottom = 32.0
color = Color(0.741176, 0.0862745, 0.0862745, 1)
metadata/_edit_lock_ = true

[node name="TopColorRect" type="ColorRect" parent="NinePatchRect/MagicLevelSelectorWrapperNode2D"]
offset_left = 7.0
offset_top = 16.0
offset_right = 97.0
offset_bottom = 17.0
color = Color(0.741176, 0.0862745, 0.0862745, 1)
metadata/_edit_lock_ = true

[node name="RightColorRect" type="ColorRect" parent="NinePatchRect/MagicLevelSelectorWrapperNode2D"]
offset_left = 97.0
offset_top = 17.0
offset_right = 98.0
offset_bottom = 31.0
color = Color(0.741176, 0.0862745, 0.0862745, 1)
metadata/_edit_lock_ = true

[node name="MpStaticLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 8.22775
offset_top = 34.0
offset_right = -47.7722
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("6")
text = "MP"
metadata/_edit_lock_ = true

[node name="MpCostLabel" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 48.2277
offset_top = 34.0
offset_right = -6.77224
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("6")
text = "Cost"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource("5_7fev1")]
position = Vector2(16, 0)
metadata/_edit_lock_ = true
